src/objects/HR__c.object
<CustomObject>
    <fields>
        <fullName>Active_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment_Status__c</fullName>
        <label>Assignment Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Function_SBU__c</fullName>
        <label>Company Function (SBU)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Source__c</fullName>
        <label>Employee Source</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referal</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Name__c</fullName>
        <label>HR Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Code__c</fullName>
        <label>Job Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Family__c</fullName>
        <label>Job Family</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMG_Office_Code__c</fullName>
        <label>LMG Office Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMG_Office_Name__c</fullName>
        <label>LMG Office Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_Group__c</fullName>
        <label>Management Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N__c</fullName>
        <label>N#</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Org_Code__c</fullName>
        <label>New Org Code (Office and Department)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_City__c</fullName>
        <label>Office City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_State__c</fullName>
        <label>Office State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telecommuter_Indicator__c</fullName>
        <label>Telecommuter Indicator</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>HR</relationshipLabel>
        <relationshipName>HR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <label>HR</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HR-{0000}</displayFormat>
        <label>Auto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>